# Moodify

./: README.md  index.html  package-lock.json  package.json
scripts/: analyze.py  requirements.txt
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: EQPanel.jsx  Player.jsx  PlaylistPanel.jsx  ThemeProvider.jsx
src/styles/: App.css  index.css
