[package]
name        = "moodify"
version     = "0.1.0"
description = "Moodify – Music player that changes UI colors based on mood"
authors     = ["Fernando Freitas de Oliveira"]
license     = "MIT"
edition     = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri      = { version = "1.6", features = [ "fs-all", "protocol-asset", "dialog-open", "shell-execute", "shell-sidecar"] }
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
